feat: 2단계 OneToMany 구현 및 기존 로직 리팩토링